[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semloc"
version = "1.0.0"
description = "Semantic constraint-based fault localization for Python programs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.25",
    "anthropic>=0.40",
    "google-generativeai>=0.8",
    "openai>=1.0",
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "coverage>=7.0",
    "python-dotenv>=1.0",
]

[project.scripts]
semloc = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
